# opcua-mappings

./: .travis.yml  Makefile.am  Makefile.in  README.md  configure  configure.ac  libopcuabinary.pc.in  make_deb.sh
debian/: README.Debian  README.source  changelog  changelog.in  control  copyright  manpage.1.ex
include/opc/ua/: channel.h  input_from_buffer.h  object_ids.h  string_utils.h
include/opc/ua/protocol/: attribute.h  monitored_items.h  nodeid.h  subscriptions.h  types.h  variant.h  view.h
include/opc/ua/protocol/binary/: stream.h
src/: binary_attribute.cpp  binary_messages.cpp  binary_stream.cpp  binary_variant.cpp  binary_view.cpp  input_from_buffer.cpp  monitored_items.cpp  nodeid.cpp  string_utils.cpp  subscriptions.cpp  types.cpp
tests/: binary_serialize_attribute.cpp  binary_serialize_data_value.cpp  binary_serialize_endpoints.cpp  binary_serialize_monitored_items.cpp  binary_serialize_variant.cpp  binary_serialize_view.cpp  binary_subscriptions.cpp  common.h  test_input_from_buffer.cpp  utils.cpp
